# screen-tool

./: .gitignore  CMakeLists.txt  README.md
include/common/: ScreenExtends.h
include/native/: screen_mac.h  screen_x11.h  scrren.h  scrren_x11.h
include/screen-tool/native/: screen.h  screen_mac.h  screen_x11.h
src/: main.cpp
src/native/: screen_mac.cpp  screen_mac.mm  screen_x11.cpp
